@@ -1,1 +1,5 @@
 # Ohjelmointi 2 harjoitustyö
+Komentoriviltä ajo komennolla:
+javaw --module-path c:\devel\javafx\lib --add-modules javafx.controls,javafx.fxml -jar kuntosali.jar
+
+(huomaa oikea javaFx sijainti)
